# pymidil

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: label-pr.yml  release.yml
docs/docs/auth/: auth_module_docs.md
docs/docs/cli/: cli.md
docs/docs/modules/: logger.md
examples/: README.md  sqs_localstack_fanout.py  sqs_localstack_saga.py
examples/event/: event_bus.py  event_context.py  idempotency_dlq.py  standalone_consumer.py  standalone_producer.py  telemetry.py  webhook_producer.py
midil/docs/: core.md
midil/event/_examples/: webhook_producer.py
midil/event/consumer/: webhook.py
midil/midilapi/: midilapi.md
midil/midilapi/pagination/: __init__.py
pymidil/: __init__.py  exceptions.py  settings.py  version.py
pymidil/auth/: __init__.py  exceptions.py
pymidil/auth/cognito/: __init__.py  authenticator.py  exceptions.py  jwt_authorizer.py
pymidil/auth/interfaces/: __init__.py  authenticator.py  authorizer.py
pymidil/cli/: display.py  main.py
pymidil/cli/commands/: init.py  launch.py  test.py  version.py
pymidil/cli/launchers/: uvicorn.py
pymidil/cli/scaffolds/: __init__.py  factory.py  fastapi.py  lambda_function.py
pymidil/cli/testing/: builder.py  runner.py
pymidil/client/: __init__.py  http.py
pymidil/client/transport/: context.py  factory.py
pymidil/event/: __init__.py  acknowledgement.py  config.py  event_bus.py  exceptions.py  message.py  otel.py
pymidil/event/consumer/: sqs.py  webhook.py  websocket.py
pymidil/event/dlq/: __init__.py  redriver.py
pymidil/event/idempotency/: __init__.py  policy.py  redis.py  store.py
pymidil/event/observability/: __init__.py  config.py  emitter.py  envelope.py  hooks.py  protocols.py
pymidil/event/producer/: base.py  redis.py  sqs.py
pymidil/event/scheduler/: __init__.py  eventbridge.py
pymidil/event/subscriber/: base.py  middleware.py
pymidil/jsonapi/: __init__.py  document.py  query.py
pymidil/jsonapi/_mixins/: __init__.py
pymidil/logger/: __init__.py  config.py  configure.py  factory.py
pymidil/logger/handlers/: base.py  stdout.py
pymidil/utils/: __init__.py  base_models.py
pymidil/web/: __init__.py  config.py  handlers.py  responses.py
pymidil/web/dependencies/: auth.py  jsonapi.py
pymidil/web/middleware/: __init__.py  auth.py
pymidil/web/pagination/: __init__.py  models.py
tests/auth/: test_exceptions.py
tests/auth/cognito/: test_client_credentials_flow.py  test_exceptions.py  test_jwt_authorizer.py
tests/client/: test_client.py
tests/event/: conftest.py  test_acknowledgement.py  test_context.py  test_dispatch_hook.py  test_dlq.py  test_idempotency.py  test_idempotency_integration.py  test_named_consumers.py  test_otel.py  test_producer_trace.py  test_telemetry_emitter.py  test_telemetry_integration.py
tests/jsonapi/: test_document.py  test_query.py
tests/web/: __init__.py
(+50 files in other folders)
