[project]
name = "pymidil"
version = "0.1.0"
description = "A Python SDK for backend systems development @midil.io"
readme = "README.md"
authors = [
    {name = "Engr. Michael Kofi Armah", email = "michael.armah@midil.io"}
]
keywords = ["midil", "sdk", "infrastructure", "platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "aiostream>=0.7.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "tenacity>=9.1.2,<10.0.0",
    "tomli>=2.2.1,<3.0.0",
    # Trace propagation is integral to the event system (API only; the SDK +
    # exporter are opt-in via the otel-sdk extra).
    "opentelemetry-api>=1.20.0,<2.0.0",
]

[project.optional-dependencies]
auth    = ["httpx>=0.28.1,<1.0.0", "pyjwt[crypto]>=2.10.1,<3.0.0", "python-dateutil>=2.8.0,<3.0.0"]
cli     = ["click>=8.1.7,<9.0.0", "pyfiglet>=1.0.4,<2.0.0", "cookiecutter>=2.5.1,<3.0.0", "rich>=14.1.0,<15.0.0", "pyyaml>=6.0.0,<7.0.0"]
web     = ["fastapi>=0.116.1,<1.0.0", "starlette>=0.45.1,<1.0.0", "uvicorn>=0.29.0,<1.0.0"]
aws     = ["aioboto3>=15.0.0,<16.0.0"]
redis   = ["redis[asyncio]>=5.2.1,<6.0.0"]
mongodb = ["pymongo[srv]>=4.0.0,<5.0.0"]
# Tracing: the library instruments against the API only; the SDK + exporter
# (otel-sdk) are the application's concern.
otel     = ["opentelemetry-api>=1.20.0,<2.0.0"]
otel-sdk = ["opentelemetry-sdk>=1.20.0,<2.0.0", "opentelemetry-exporter-otlp>=1.20.0,<2.0.0"]
full = [
    "httpx>=0.28.1,<1.0.0", "pyjwt[crypto]>=2.10.1,<3.0.0", "python-dateutil>=2.8.0,<3.0.0",
    "click>=8.1.7,<9.0.0", "pyfiglet>=1.0.4,<2.0.0", "cookiecutter>=2.5.1,<3.0.0", "rich>=14.1.0,<15.0.0", "pyyaml>=6.0.0,<7.0.0",
    "fastapi>=0.116.1,<1.0.0", "starlette>=0.45.1,<1.0.0", "uvicorn>=0.29.0,<1.0.0",
    "aioboto3>=15.0.0,<16.0.0", "redis[asyncio]>=5.2.1,<6.0.0", "pymongo[srv]>=4.0.0,<5.0.0",
    "opentelemetry-api>=1.20.0,<2.0.0", "opentelemetry-sdk>=1.20.0,<2.0.0"
]

[project.scripts]
midil = "pymidil:cli"

[tool.poetry]
packages = [{ include = "pymidil" }]
package-mode = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^1.1.0"
pytest-cov = "^4.0.0"
trio = "^0.30.0"
black = "^23.0.0"
isort = "^5.12.0"
ruff = ">=0.6.3,<0.10.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"
types-python-dateutil = "^2.9.0.20250708"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.3.0"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["aioboto3.*", "botocore.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
